# chat

./: .clang-format  .gitignore  BugRecoding  CMakeLists.txt  README.md  build.sh  mysql.sql
ChatServer/: AsioIOServicePool.cc  AsioIOServicePool.h  CMakeLists.txt  CServer.cc  CServer.h  CSession.cc  CSession.h  ChatGrpcClient.cc  ChatGrpcClient.h  ChatServer.cc  ChatServiceImpl.cc  ChatServiceImpl.h  Logger.cc  LogicSystem.cc  LogicSystem.h  MsgNode.h  MysqlDao.cc  MysqlDao.h  MysqlMgr.cc  MysqlMgr.h  RedisMgr.cc  RedisMgr.h  Singleton.h  StatusGrpcClient.h  UserMgr.cc  config.ini  const.h  message.grpc.pb.h  message.pb.h  mysql.cc  redis.cc  redis.h
Client/AnyoneChat/: AnyoneChat.pro  AnyoneChat_resource.rc  ChatItemBase.cpp  FluButton.cpp  FluButton.h  FluPasswordBox.cpp  FluPasswordBox.h  FluTextBox.cpp  FluTextBox.h  Makefile  Makefile.Debug  Makefile.Release  applyfriendpage.cpp  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatpage.cpp  chatpage.h  chatuserwid.ui  contactuserlist.cpp  global.h  httpmgr.cpp  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  notification.h  object_script.AnyoneChat.Debug  object_script.AnyoneChat.Release  rc.qrc  registerdialog.cpp  registerdialog.h  registerdialog.ui  resetdialog.cpp  resetdialog.h  resetdialog.ui  statewidget.cpp  (+24 more)
Client/AnyoneChat/style/: stylesheet.qss
Client/llfcchat/: Makefile  Makefile.Debug  Makefile.Release  applyfrienditem.cpp  applyfriendpage.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatpage.cpp  chatpage.ui  global.h  llfcchat.pro  llfcchat_resource.rc  logindialog.cpp  logindialog.ui  notification.cpp  object_script.llfcchat.Debug  object_script.llfcchat.Release  rc.qrc  tcpmgr.cpp  ui_chatdialog.h  ui_chatpage.h  ui_chatuserwid.h  ui_conuseritem.h  ui_friendlabel.h  ui_lineitem.h  ui_loadingdlg.h  ui_logindialog.h  ui_mainwindow.h  ui_resetdialog.h  userinfopage.cpp  userinfopage.ui  usermgr.cpp  usermgr.h
Client/llfcchat/style/: stylesheet.qss
GateServer/: AsioIOServicePool.cc  AsioIOServicePool.h  CMakeLists.txt  CServer.cc  CServer.h  ConfigMgr.cc  DistLock.cc  GateServer.cc  HttpConnection.cc  HttpConnection.h  LogicSystem.cc  MysqlDao.cc  MysqlDao.h  MysqlMgr.cc  MysqlMgr.h  RedisMgr.cc  RedisMgr.h  Singleton.h  StatusGrpcClient.cc  StatusGrpcClient.h  VerifyGrpcClient.cc  VerifyGrpcClient.h  config.ini  const.h  message.grpc.pb.h
Server/ChatServer/: CMakeLists.txt  CServer.cc  CServer.h  CSession.cc  CSession.h  ChatGrpcClient.cc  ChatGrpcClient.h  ChatServer.cc  ChatServer.h  ChatServiceImpl.cc  ChatServiceImpl.h  LogicSystem.cc  LogicSystem.h  MsgNode.cc  MsgNode.h  Session.cc  Session.h  StatusGrpcClient.cc  StatusGrpcClient.h  UserMgr.cc  UserMgr.h  config.ini  config2.ini  main.cc  message.grpc.pb.cc  message.pb.cc  message.proto
Server/Common/: AsioIOServicePool.cc  AsioIOServicePool.h  CMakeLists.txt  ConfigMgr.cc  ConfigMgr.h  DistLock.cc  Logger.cc  Logger.h  MysqlDao.cc  MysqlDao.h  MysqlMgr.cc  MysqlMgr.h  RedisMgr.cc  RedisMgr.h  Singleton.h  const.h  data.h  mysql.cc  mysql.h  redis.cc  redis.h
Server/GateServer/: CMakeLists.txt  CServer.cc  CServer.h  GateServer.cc  GateServer.h  HttpConnection.cc  HttpConnection.h  LogicSystem.cc  LogicSystem.h  StatusGrpcClient.cc  StatusGrpcClient.h  VerifyGrpcClient.cc  VerifyGrpcClient.h  config.ini  main.cc
Server/StatusServer/: CMakeLists.txt  ChatGrpcClient.cc  ChatGrpcClient.h  StatusServer.cc  StatusServiceImpl.cc  StatusServiceImpl.h  config.ini  main.cc  message.pb.cc  message.proto
Server/VarifyServer/: config.js  config.json  email.js  package.json  redis.js  server.js
StatusServer/: AsioIOServicePool.cc  CMakeLists.txt  ChatGrpcClient.cc  ChatGrpcClient.h  ConfigMgr.cc  DistLock.cc  DistLock.h  Logger.h  MysqlDao.cc  MysqlDao.h  MysqlMgr.cc  MysqlMgr.h  RedisMgr.cc  RedisMgr.h  Singleton.h  StatusServer.cc  StatusServiceImpl.cc  StatusServiceImpl.h  const.h  db.h  message.grpc.pb.cc  message.pb.h  mysql.cc  mysql.h  redis.cc
VarifyServer/: config.js  config.json  package-lock.json  server.js
